[tool.poetry]
name = "lofibot"
version = "0.1.0"
description = ""
authors = ["Rishi Saxena <rishi.saxena2019@vitstudent.ac.in"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
mal = "^0.4.0"
config = "^0.5.0"
replit = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
